<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainViewModel"
            type="com.ncr.smartkart.viewModel.MainViewModel" />

        <variable
            name="item"
            type="com.ncr.smartkart.models.Item" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#f0f0f0"
        app:cardCornerRadius="@dimen/size10dp"
        app:cardElevation="5dp"
        app:contentPadding="@dimen/size10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/itemid_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_id" />

                <TextView
                    android:id="@+id/itemId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{item.itemId}" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/itemName_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_name" />

                <TextView
                    android:id="@+id/itemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{item.itemName}" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/itemWeight_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_weight" />

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{item.weight}" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/itemPrice_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_price" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{item.price}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/quantity" />

                <ImageView
                    android:id="@+id/increment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/size10dp"
                    android:src="@drawable/ic_exposure_plus_1_black_24dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/size10dp"
                    android:gravity="center"
                    android:text="@{item.quantity}" />

                <ImageView
                    android:id="@+id/decrement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/size10dp"
                    android:src="@drawable/ic_exposure_neg_1_black_24dp"
                    tools:ignore="ContentDescription" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>